<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.statusbar.quickpanel.QuickSettingsView android:orientation="horizontal" android:id="@id/quickpanel_quick_settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <HorizontalScrollView android:scrollbars="none" android:fadingEdge="vertical" android:fadingEdgeLength="20.0px" android:layout_width="wrap_content" android:layout_height="fill_parent"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <RelativeLayout android:orientation="horizontal" android:background="#00000000" android:layout_width="576.0dip" android:layout_height="80.0dip">
            <FrameLayout android:id="@id/wifi_bttn" android:layout_width="64.0dip" android:layout_height="84.0dip" android:layout_weight="1.0">
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/quickpanel_wifi_btn_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.669983dip" android:src="@drawable/quickpanel_icon_wifi_off" />
                <com.android.systemui.statusbar.quickpanel.WifiSettingButton android:textSize="12.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/quickpanel_wifi_btn_text" android:paddingTop="54.669983dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/quickpanel_wifi_text" android:shadowDx="1.0" android:shadowDy="1.0" />
                <ImageView android:layout_gravity="bottom|center" android:id="@id/quickpanel_wifi_btn_status_icon" android:paddingLeft="2.3299866dip" android:paddingRight="2.3299866dip" android:layout_width="fill_parent" android:layout_height="5.3299866dip" android:layout_marginBottom="0.5dip" android:src="@drawable/quickpanel_icon_off" android:scaleType="fitXY" />
            </FrameLayout>
            <FrameLayout android:id="@id/bt_bttn" android:layout_width="64.0dip" android:layout_height="84.0dip" android:layout_weight="1.0" android:layout_toRightOf="@id/wifi_bttn">
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/quickpanel_bt_btn_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.669983dip" android:src="@drawable/quickpanel_icon_bluetooth_off" />
                <com.android.systemui.statusbar.quickpanel.BluetoothSettingButton android:textSize="12.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/quickpanel_bt_btn_text" android:paddingTop="54.669983dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/quickpanel_bluetooth_text" android:shadowDx="1.0" android:shadowDy="1.0" />
                <ImageView android:layout_gravity="bottom|center" android:id="@id/quickpanel_bt_btn_status_icon" android:paddingLeft="2.3299866dip" android:paddingRight="2.3299866dip" android:layout_width="fill_parent" android:layout_height="5.3299866dip" android:layout_marginBottom="0.5dip" android:src="@drawable/quickpanel_icon_off" android:scaleType="fitXY" />
            </FrameLayout>
            <FrameLayout android:id="@id/gps_bttn" android:layout_width="64.0dip" android:layout_height="84.0dip" android:layout_weight="1.0" android:layout_toRightOf="@id/bt_bttn">
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/quickpanel_gps_btn_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.669983dip" android:src="@drawable/quickpanel_icon_gps_off" />
                <com.android.systemui.statusbar.quickpanel.GpsSettingButton android:textSize="12.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/quickpanel_gps_btn_text" android:paddingTop="54.669983dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/quickpanel_gps_text" android:shadowDx="1.0" android:shadowDy="1.0" />
                <ImageView android:layout_gravity="bottom|center" android:id="@id/quickpanel_gps_btn_status_icon" android:paddingLeft="2.3299866dip" android:paddingRight="2.3299866dip" android:layout_width="fill_parent" android:layout_height="5.3299866dip" android:layout_marginBottom="0.5dip" android:src="@drawable/quickpanel_icon_off" android:scaleType="fitXY" />
            </FrameLayout>
            <FrameLayout android:id="@id/sound_bttn" android:layout_width="64.0dip" android:layout_height="84.0dip" android:layout_weight="1.0" android:layout_toRightOf="@id/gps_bttn">
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/quickpanel_sound_btn_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.669983dip" android:src="@drawable/quickpanel_icon_sound_on_on" />
                <com.android.systemui.statusbar.quickpanel.SoundSettingButton android:textSize="12.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/quickpanel_sound_btn_text" android:paddingTop="44.669983dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/quickpanel_sound_text" android:shadowDx="1.0" android:shadowDy="1.0" />
                <ImageView android:layout_gravity="bottom|center" android:id="@id/quickpanel_sound_btn_status_icon" android:paddingLeft="2.3299866dip" android:paddingRight="2.3299866dip" android:layout_width="fill_parent" android:layout_height="5.3299866dip" android:layout_marginBottom="0.5dip" android:src="@drawable/quickpanel_icon_on" android:scaleType="fitXY" />
            </FrameLayout>
            <FrameLayout android:id="@id/rotation_bttn" android:layout_width="64.0dip" android:layout_height="84.0dip" android:layout_weight="1.0" android:layout_toRightOf="@id/sound_bttn">
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/quickpanel_rotation_btn_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.669983dip" android:src="@drawable/quickpanel_icon_rotation_off" />
                <com.android.systemui.statusbar.quickpanel.AutoRotationSettingButton android:textSize="12.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/quickpanel_rotation_btn_text" android:paddingTop="44.669983dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/quickpanel_rotation_text" android:shadowDx="1.0" android:shadowDy="1.0" />
                <ImageView android:layout_gravity="bottom|center" android:id="@id/quickpanel_rotation_btn_status_icon" android:paddingLeft="2.3349915dip" android:paddingRight="2.3249817dip" android:layout_width="fill_parent" android:layout_height="5.3299866dip" android:layout_marginBottom="0.5dip" android:src="@drawable/quickpanel_icon_off" android:scaleType="fitXY" />
            </FrameLayout>
            <FrameLayout android:id="@id/data_bttn" android:layout_width="64.0dip" android:layout_height="84.0dip" android:layout_weight="1.0" android:layout_toRightOf="@id/rotation_bttn">
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/quickpanel_mobiledata_btn_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.669983dip" android:src="@drawable/quickpanel_icon_mobile_data_off" />
                <com.android.systemui.statusbar.quickpanel.MobileDataSettingButton android:textSize="12.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/quickpanel_mobiledata_btn_text" android:paddingTop="54.669983dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/quickpanel_mobiledata_text" android:shadowDx="1.0" android:shadowDy="1.0" />
                <ImageView android:layout_gravity="bottom|center" android:id="@id/quickpanel_mobiledata_btn_status_icon" android:paddingLeft="2.3349915dip" android:paddingRight="2.3249817dip" android:layout_width="fill_parent" android:layout_height="5.3299866dip" android:layout_marginBottom="0.5dip" android:src="@drawable/quickpanel_icon_off" android:scaleType="fitXY" />
            </FrameLayout>
            <FrameLayout android:id="@id/flight_bttn" android:layout_width="64.0dip" android:layout_height="84.0dip" android:layout_weight="1.0" android:layout_toRightOf="@id/data_bttn">
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/quickpanel_flight_btn_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.669983dip" android:src="@drawable/quick_panel_icon_flight_mode_off" />
                <com.android.systemui.statusbar.quickpanel.FlightSettingButton android:textSize="12.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/quickpanel_flight_btn_text" android:paddingTop="44.669983dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/quickpanel_flight_text" android:shadowDx="1.0" android:shadowDy="1.0" />
                <ImageView android:layout_gravity="bottom|center" android:id="@id/quickpanel_flight_btn_status_icon" android:paddingLeft="2.3349915dip" android:paddingRight="2.3249817dip" android:layout_width="fill_parent" android:layout_height="5.3299866dip" android:layout_marginBottom="0.5dip" android:src="@drawable/quickpanel_icon_off" android:scaleType="fitXY" />
            </FrameLayout>
            <FrameLayout android:id="@id/sync_bttn" android:layout_width="64.0dip" android:layout_height="84.0dip" android:layout_weight="1.0" android:layout_toRightOf="@id/flight_bttn">
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/quickpanel_sync_btn_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.669983dip" android:src="@drawable/quick_panel_icon_sync_mode_off" />
                <com.android.systemui.statusbar.quickpanel.SyncSettingButton android:textSize="12.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/quickpanel_sync_btn_text" android:paddingTop="44.669983dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/quickpanel_sync_text" android:shadowDx="1.0" android:shadowDy="1.0" />
                <ImageView android:layout_gravity="bottom|center" android:id="@id/quickpanel_sync_btn_status_icon" android:paddingLeft="2.3349915dip" android:paddingRight="2.3249817dip" android:layout_width="fill_parent" android:layout_height="5.3299866dip" android:layout_marginBottom="0.5dip" android:src="@drawable/quickpanel_icon_off" android:scaleType="fitXY" />
            </FrameLayout>
            <FrameLayout android:id="@id/vibrate_bttn" android:layout_width="fill_parent" android:layout_height="84.0dip" android:layout_weight="1.0" android:layout_toRightOf="@id/sync_bttn">
                <ImageView android:layout_gravity="center_horizontal" android:id="@id/quickpanel_vibrate_btn_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.669983dip" android:src="@drawable/quick_panel_icon_vibrate_mode_off" />
                <com.android.systemui.statusbar.quickpanel.VibrateSettingButton android:textSize="12.0dip" android:textStyle="normal" android:textColor="#ffffffff" android:gravity="center_horizontal" android:id="@id/quickpanel_vibrate_btn_text" android:paddingTop="54.669983dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/quickpanel_vibrate_text" android:shadowDx="1.0" android:shadowDy="1.0" />
                <ImageView android:layout_gravity="bottom|center" android:id="@id/quickpanel_vibrate_btn_status_icon" android:paddingLeft="2.3349915dip" android:paddingRight="2.3249817dip" android:layout_width="fill_parent" android:layout_height="5.3299866dip" android:layout_marginBottom="0.5dip" android:src="@drawable/quickpanel_icon_off" android:scaleType="fitXY" />
            </FrameLayout>
        </RelativeLayout>
    </HorizontalScrollView>
</com.android.systemui.statusbar.quickpanel.QuickSettingsView>
